# DICE

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  TEST.cpp  setup_libraries.sh  verify_dependencies.sh
.github/workflows/: .ci-checks.yml  ci-check.yml  ci-checks.yml  codeql.yml
docs/: CodeStyle.txt
include/components/: Card.hpp  Chip.hpp
include/core/: GameObject.hpp  IObjectFactory.hpp  Model.hpp  ResourceManager.hpp
include/scene/: DefaultFactory.hpp
include/scripting/: LuaScript.hpp  LuaScriptEngine.hpp
include/ui/: View.hpp
scr/: main.cpp
scripts/: example.lua
src/: main.cpp
src/components/: Card.cpp  Chip.cpp
src/core/: GameObject.cpp  Model.cpp  ResourceManager.cpp
src/scripting/: LuaScript.cpp  LuaScriptEngine.cpp
src/ui/: View.cpp
tests/components/: test_Chip.cpp
tests/core/: test_GameObject.cpp  test_Model.cpp  test_ResourceManager.cpp
tests/scripting/: test_LuaScriptEngine.cpp
tests/ui/: test_View.cpp
